Bug 42133 - Fix a typo in the adoption agency causing test failures
Summary: Fix a typo in the adoption agency causing test failures
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-12 20:05 PDT by Eric Seidel (no email)
Modified: 2010-07-12 22:10 PDT (History)
2 users (show)

See Also:


Attachments
Patch (3.71 KB, patch)
2010-07-12 20:09 PDT, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-12 20:05:45 PDT
Fix a typo in the adoption agency causing test failures
Comment 1 Eric Seidel (no email) 2010-07-12 20:09:12 PDT
Created attachment 61317 [details]
Patch
Comment 2 WebKit Commit Bot 2010-07-12 22:10:22 PDT
Comment on attachment 61317 [details]
Patch

Clearing flags on attachment: 61317

Committed r63168: <http://trac.webkit.org/changeset/63168>
Comment 3 WebKit Commit Bot 2010-07-12 22:10:27 PDT
All reviewed patches have been landed.  Closing bug.